k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: knp-connect-api
spec:
  selector:
    app: knp-connect-api
  ports:
    - name: http
      port: 80
      targetPort: http
