k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: knp-connect-frontend
spec:
  selector:
    app: knp-connect-frontend
  ports:
    - name: http
      port: 80
      targetPort: http
